Replace use of SOAP-encoding for char with a specialization of integer.
git-svn-id: https://svn.apache.org/repos/asf/cxf/trunk@694981 13f79535-47bb-0310-9956-ffa450edef68